--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ body {
   line-height: 1.2;
   margin: 0;
   padding: 0;
-  color: #014d69;
-  background-color: #f8f8f8;
+  color: #014D69;
+  background-color: #F8F8F8;
 }
 
 input,
@@ -112,7 +112,7 @@ ul li {
 }
 
 .container {
-  max-width: 117rem;
+  width: 117rem;
   margin: 0 auto;
 }
 
@@ -130,13 +130,13 @@ ul li {
   max-width: 50rem;
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type="number"] {
+input[type=number] {
   -moz-appearance: textfield;
 }
 
@@ -149,6 +149,40 @@ input[type="number"] {
   min-width: 117rem;
   z-index: 1;
 }
+.header .navbar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.header .list-item {
+  list-style-type: none;
+  flex-basis: 100%;
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  color: #014D69;
+  transform: translateY(0);
+  transition: transform 0.5s ease, opacity 0.2s ease;
+  cursor: pointer;
+}
+.header .list-item-name {
+  font-size: 15px;
+  font-weight: 500;
+  position: absolute;
+  transform: translate(0, 50px);
+  transition: transform 0.5s ease, opacity 0.2s ease;
+  opacity: 0;
+}
+.header .list-item:hover {
+  color: #F3AE5F;
+  transform: translateY(-6px);
+}
+.header .list-item:hover .list-item-name {
+  transform: translateY(30px);
+  opacity: 1;
+}
 .header .header__menu {
   padding-top: 3rem;
 }
@@ -158,12 +192,12 @@ input[type="number"] {
   flex-wrap: wrap;
 }
 .header .header__menu ul li {
-  color: #f3ae5f;
+  color: #F3AE5F;
   font-size: 1.8rem;
   line-height: 1.2;
 }
 .header .header__menu ul li:hover {
-  color: #014d69;
+  color: #014D69;
   transform: scale(1.1);
 }
 
@@ -180,15 +214,15 @@ input[type="number"] {
 .skills {
   padding-top: 10rem;
   padding-bottom: 10rem;
-  background-color: #014d69;
+  background-color: #014D69;
 }
 .skills__title {
   text-align: center;
-  color: #f3ae5f;
+  color: #F3AE5F;
 }
 .skills__text {
   margin: 3rem auto;
-  color: #f3ae5f;
+  color: #F3AE5F;
   text-align: center;
 }
 .skills__items {
@@ -199,7 +233,7 @@ input[type="number"] {
 }
 .skills__item {
   padding: 1.5rem;
-  background-color: #0b87ba;
+  background-color: #0B87BA;
   border-radius: 10%;
   opacity: 0.9;
   box-shadow: 0.7rem 0.7rem 0.7rem rgba(0, 0, 0, 0.7);
@@ -211,7 +245,7 @@ input[type="number"] {
 .skills__item-text {
   margin-top: 1rem;
   text-align: center;
-  color: #f3ae5f;
+  color: #F3AE5F;
   font-size: 1.8rem;
   line-height: 1.5;
 }
@@ -234,13 +268,13 @@ input[type="number"] {
   max-width: 40rem;
   overflow: hidden;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 .portfolio__item span {
   font-size: 1.2rem;
 }
 .portfolio__item a:hover {
-  color: #f3ae5f;
+  color: #F3AE5F;
 }
 .portfolio__item-text {
   text-align: center;
@@ -261,10 +295,10 @@ input[type="number"] {
 .contacts {
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background-color: #014d69;
+  background-color: #014D69;
 }
 .contacts__title {
-  color: #f3ae5f;
+  color: #F3AE5F;
 }
 .contacts__list {
   margin-top: 3rem;
@@ -319,7 +353,7 @@ input[type="number"] {
     line-height: 1;
   }
   .portfolio__item a:hover {
-    color: #f3ae5f;
+    color: #F3AE5F;
   }
   .portfolio__item-text {
     font-size: 5rem;
@@ -328,7 +362,7 @@ input[type="number"] {
   .contacts {
     padding-top: 8rem;
     padding-bottom: 8rem;
-    background-color: #014d69;
+    background-color: #014D69;
   }
   .contacts__list {
     margin-top: 5rem;
