--- a/scss/_set.scss
+++ b/scss/_set.scss
@@ -10,7 +10,7 @@
 
 html {
     font-family: 'Poppins', sans-serif; // шрифт по умолчанию по сайту
-    font-size: 0.625vw; // на разрешении 1600 0.625vw === 10px
+    font-size: 10px; // на разрешении 1600 0.625vw === 10px
     font-style: normal;
     font-weight: 500;
     -webkit-animation: bugfix infinite 1s;
