--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 html {
   font-family: "Poppins", sans-serif;
-  font-size: 0.625vw;
+  font-size: 10px;
   font-style: normal;
   font-weight: 500;
   -webkit-animation: bugfix infinite 1s;
@@ -202,13 +202,25 @@ input[type=number] {
 }
 
 .who {
-  margin-top: 10rem;
+  margin-top: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .who__ami-name {
   margin-top: 5rem;
 }
 .who__ami-text {
   margin: 3rem auto;
+}
+.who__img img {
+  max-width: 30rem;
+  border-radius: 5rem;
+  transition-duration: 500ms;
+}
+.who__img img:hover {
+  transform: scale(1.3);
 }
 
 .skills {
