--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,7 +16,6 @@ $second-color: #F3AE5F;
         justify-content: space-between;
         width: 100%;
       }
-      
       .list-item {
         list-style-type: none;
         flex-basis: 100%;
@@ -71,7 +70,11 @@ ul {
 }
 }
 .who {
-    margin-top: 10rem;
+    margin-top: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     &__ami{
         &-name {
             margin-top: 5rem;
@@ -79,6 +82,16 @@ ul {
     &-text {
         margin: 3rem auto;
     }
+    }
+    &__img {
+        & img {
+            max-width: 30rem;
+            border-radius: 5rem;
+            transition-duration: 500ms;
+           &:hover {
+            transform: scale(1.3);
+           }
+        }
     }
 }
 .skills {
@@ -109,8 +122,7 @@ ul {
         box-shadow: .7rem .7rem .7rem  rgba(0,0,0,0.7); 
         img {
             width: 15rem;
-            height: 10rem;
-           
+            height: 10rem; 
         }
         &-text {
             margin-top: 1rem;
