--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ input[type=number] {
 }
 
 .skills {
-  padding-top: 10rem;
+  padding-top: 8rem;
   padding-bottom: 10rem;
   background-color: #014D69;
 }
@@ -232,13 +232,9 @@ input[type=number] {
   text-align: center;
   color: #F3AE5F;
 }
-.skills__text {
-  margin: 3rem auto;
-  color: #F3AE5F;
-  text-align: center;
-}
 .skills__items {
-  margin-top: 10rem;
+  margin-top: 8rem;
+  margin-bottom: 3rem;
   display: flex;
   justify-content: space-between;
   gap: 3rem;
@@ -300,27 +296,40 @@ input[type=number] {
 .portfolio__item-img {
   padding-left: 10px;
   padding-right: 10px;
-  width: 20rem;
-  height: 70rem;
+  width: 28rem;
+  height: 60rem;
 }
 
 .contacts {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 6rem;
+  padding-bottom: 7rem;
   background-color: #014D69;
 }
 .contacts__title {
   color: #F3AE5F;
 }
 .contacts__list {
-  margin-top: 3rem;
+  margin-top: 4rem;
   display: flex;
   justify-content: center;
-  gap: 3rem;
+  gap: 5rem;
 }
 .contacts__item img {
   width: 5rem;
   height: 5rem;
+  transition-duration: 500ms;
+}
+.contacts__item img:hover {
+  transform: scale(1.2);
+}
+
+.swiper-button-prev:after {
+  color: #014D69;
+  margin-right: 2.5rem;
+}
+.swiper-button-next:after {
+  color: #014D69;
+  margin-left: 2.5rem;
 }
 
 @media (max-width: 479.9px) {
