--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ input[type=number] {
   margin-bottom: 10rem;
 }
 .portfolio__items {
-  margin-top: 8rem;
+  margin-top: 5rem;
   margin-bottom: 8rem;
   display: flex;
   justify-content: center;
@@ -280,24 +280,32 @@ input[type=number] {
 }
 .portfolio__item span {
   font-size: 1.2rem;
+  color: #F3AE5F;
 }
 .portfolio__item a:hover {
   color: #F3AE5F;
 }
 .portfolio__item-text {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 1.5;
 }
-.portfolio__item-link {
-  text-align: center;
-  margin-bottom: 1rem;
-}
 .portfolio__item-img {
+  margin-top: 3rem;
   padding-left: 10px;
   padding-right: 10px;
   width: 28rem;
   height: 60rem;
+  transition-duration: 500ms;
+}
+.portfolio__item-img img {
+  border-radius: 1rem;
+}
+.portfolio__item-img a {
+  cursor: pointer;
+}
+.portfolio__item-img:hover {
+  transform: scale(1.07);
 }
 
 .contacts {
