--- a/scss/_set.scss
+++ b/scss/_set.scss
@@ -136,4 +136,8 @@ input[type="number"] {
     -moz-appearance: textfield;
 }
 
-
+@media (max-width: 48rem){
+    .container {
+        width: 40rem;
+    }
+}
