--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 
 @import '_set';
-$first-color: #014D69;
-$second-color: #F3AE5F;
+$first-color: #025A5B;
+$second-color: #E6984E;
 
 .header {
     padding-bottom: 5rem;
@@ -49,11 +49,11 @@ $second-color: #F3AE5F;
         }
       }
 .header__menu{
-padding-top: 3rem;
+    padding-top: 3rem;
 ul {
- display: flex;
- justify-content: space-between;
- flex-wrap: wrap;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
  li {
     color: $second-color;
     font-size: 1.8rem;
@@ -100,6 +100,7 @@ ul {
     &__title {
         text-align: center;
         color: $second-color ;
+        margin: 0 auto;
     }
     &__items {
         margin-top: 8rem;
@@ -133,6 +134,9 @@ ul {
 .portfolio {
     margin-top: 10rem;
     margin-bottom: 10rem;
+    &__title {
+        margin: 0 auto;
+    }
     &__items {
         margin-top: 5rem;
         margin-bottom: 8rem;
@@ -185,7 +189,8 @@ ul {
     padding-bottom: 7rem;
     background-color: $first-color;
     &__title {
-        color: $second-color ;
+        color: $second-color;
+        margin: 0 auto;
     }
     &__list {
         margin-top: 4rem;
