--- a/scss/_set.scss
+++ b/scss/_set.scss
@@ -29,7 +29,7 @@ body {
     line-height: 1.2;
     margin: 0;
     padding: 0;
-    color: #014D69; // цвет по умолчанию текста по сайту
+    color: #025A5B; // цвет по умолчанию текста по сайту
     background-color: #F8F8F8; //
 }
 
