--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   line-height: 1.2;
   margin: 0;
   padding: 0;
-  color: #014D69;
+  color: #025A5B;
   background-color: #F8F8F8;
 }
 
@@ -208,25 +208,27 @@ input[type=number] {
 }
 
 .who {
-  margin-top: 20rem;
+  margin-top: 15rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 .who__ami-name {
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 .who__ami-text {
   margin: 3rem auto;
 }
 .who__img img {
-  max-width: 30rem;
+  max-width: 35rem;
   border-radius: 5rem;
   transition-duration: 500ms;
 }
 .who__img img:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
+  padding: 0.1rem;
+  box-shadow: 0 0 2rem #025A5B;
 }
 
 .skills {
@@ -272,7 +274,7 @@ input[type=number] {
 
 .portfolio {
   margin-top: 10rem;
-  margin-bottom: 10rem;
+  margin-bottom: 7rem;
 }
 .portfolio__title {
   margin: 0 auto;
@@ -349,15 +351,21 @@ input[type=number] {
   transform: scale(1.2);
 }
 
-.swiper-button-prev:after {
-  color: #025A5B;
-  margin-right: 2.5rem;
+.swiper {
+  padding-bottom: 7rem;
 }
-.swiper-button-next:after {
-  color: #025A5B;
-  margin-left: 2.5rem;
+.swiper__buttons {
+  position: absolute;
+  bottom: 0;
+  cursor: pointer;
+  left: 50%;
 }
-
+.swiper__buttons img {
+  width: 3.5rem;
+}
+.swiper-button-left {
+  transform: translateX(-5rem);
+}
 @media (max-width: 76.8rem) {
   .swiper-button-prev:after {
     color: #025A5B;
