--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,14 +67,14 @@ ul {
 }
 }
 .who {
-    margin-top: 20rem;
+    margin-top: 15rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     &__ami{
         &-name {
-            margin-top: 5rem;
+            margin-top: 8rem;
         }
     &-text {
         margin: 3rem auto;
@@ -82,11 +82,13 @@ ul {
     }
     &__img {
         & img {
-            max-width: 30rem;
+            max-width: 35rem;
             border-radius: 5rem;
             transition-duration: 500ms;
            &:hover {
-            transform: scale(1.3);
+            transform: scale(1.2);
+            padding: .1rem;
+            box-shadow: 0 0 2rem $first-color;
            }
         }
     }
@@ -133,7 +135,7 @@ ul {
 }
 .portfolio {
     margin-top: 10rem;
-    margin-bottom: 10rem;
+    margin-bottom: 7rem;
     &__title {
         margin: 0 auto;
     }
@@ -208,13 +210,21 @@ ul {
     }
 }
 .swiper {
-    &-button-prev:after {
-        color: $first-color;
-        margin-right: 2.5rem;
+       padding-bottom: 7rem;
+       &__buttons {
+        position: absolute;
+        bottom: 0;
+        cursor: pointer;
+        left: 50%;
+        & img {
+            width: 3.5rem;
+        }
+       }
+    &-button-left {
+        transform: translateX(-5rem);
     }
-    &-button-next:after {
-        color: $first-color;
-        margin-left: 2.5rem;
+    &-button-right {
+        // transform: translateX(rem);
     }
 }
 
