--- a/scss/_set.scss
+++ b/scss/_set.scss
@@ -120,6 +120,7 @@ ul li {
     font-size: 5rem;
     line-height: 1.2;
     overflow: hidden;
+    letter-spacing: .5rem;
 }
 .text {
     text-align: center;
