--- a/scss/style.scss
+++ b/scss/style.scss
@@ -75,6 +75,7 @@ ul {
     &__ami{
         &-name {
             margin-top: 8rem;
+            letter-spacing: .1rem;
         }
     &-text {
         margin: 3rem auto;
