--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ ul li {
 }
 
 .title {
+  font-family: "Titan One", sans-serif;
   max-width: 60rem;
   text-align: center;
   font-weight: 700;
@@ -217,6 +218,7 @@ input[type=number] {
 }
 .who__ami-name {
   margin-top: 8rem;
+  letter-spacing: 0.1rem;
 }
 .who__ami-text {
   margin: 3rem auto;
