--- a/scss/_set.scss
+++ b/scss/_set.scss
@@ -114,6 +114,7 @@ ul li {
     margin: 0 auto;
 }
 .title {
+    font-family: 'Titan One', sans-serif; 
     max-width: 60rem;
     text-align: center;
     font-weight: 700;
