--- a/css/style.css
+++ b/css/style.css
@@ -356,13 +356,14 @@ input[type=number] {
 }
 
 .swiper {
-  padding-bottom: 7rem;
+  padding-top: 7rem;
 }
 .swiper__buttons {
   position: absolute;
-  bottom: 0;
+  top: 3rem;
   cursor: pointer;
   left: 50%;
+  z-index: 5;
 }
 .swiper__buttons img {
   width: 3.5rem;
@@ -419,7 +420,6 @@ input[type=number] {
   .portfolio {
     margin-left: 0;
     margin-top: 5rem;
-    margin-bottom: 2rem;
   }
   .portfolio__items {
     margin-top: 2rem;
