--- a/scss/style.scss
+++ b/scss/style.scss
@@ -212,12 +212,13 @@ ul {
     }
 }
 .swiper {
-       padding-bottom: 7rem;
+       padding-top: 7rem;
        &__buttons {
         position: absolute;
-        bottom: 0;
+        top: 3rem;
         cursor: pointer;
         left: 50%;
+        z-index: 5;
         & img {
             width: 3.5rem;
         }
@@ -289,7 +290,6 @@ ul {
         .portfolio {
             margin-left: 0;
             margin-top: 5rem;
-            margin-bottom: 2rem;
             &__items {
                 margin-top: 2rem;
                 margin-bottom: 0;
@@ -328,9 +328,6 @@ ul {
                 margin-left: 0;
                 margin-left: -2rem;
             }
-        }
-     
-      }
-     
-
-
+        }  
+    }
+      
